# robot_playground

./: README.md
package/robot_playground/: CMakeLists.txt  package.xml
package/robot_playground/description/: robot.urdf.xacro
package/robot_playground/description/lorlens/: lorlens.gazebo  lorlens.trans  lorlens.xacro
package/robot_playground/launch/: launch_sim.launch.py  rsp.launch.py
package/robot_playground/meshes/lorlens/: base_link.stl  left_1.stl  right_1.stl
package/robot_playground/worlds/: abu2024.sdf
worlds_file/abu2024/abu2024_300/: model.config  model.sdf
worlds_file/abu2024/abu2024_300/meshes/: 300.dae
worlds_file/abu2024/abu2024_bf301/: model.config  model.sdf
worlds_file/abu2024/abu2024_bf301/meshes/: bf301.dae
worlds_file/abu2024/abu2024_bf302/: model.config  model.sdf
worlds_file/abu2024/abu2024_bf302/meshes/: bf302.dae
worlds_file/abu2024/abu2024_floor1/: model.config  model.sdf
worlds_file/abu2024/abu2024_floor1/meshes/: abu2024_floor1.dae
worlds_file/abu2024/abu2024_mag/: model.config  model.sdf
worlds_file/abu2024/abu2024_mag/meshes/: mag.dae
worlds_file/abu2024/abu2024_slope1/: model.config  model.sdf
worlds_file/abu2024/abu2024_slope2/: model.config  model.sdf
worlds_file/abu2024/abu2024_slope3/: model.config  model.sdf
worlds_file/abu2024/abu2024_trakra/: model.config  model.sdf
worlds_file/abu2024/abu2024_wall/: model.config  model.sdf
worlds_file/abu2024/abu2024_wing1/: model.config  model.sdf
worlds_file/abu2024/abu2024_wing2/: model.config  model.sdf
(+7 files in other folders)
