<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_playground</name>
  <version>0.0.0</version>
  <description>For test robot model and world</description>
  <maintainer email="danryv46@gmail.com">dandog</maintainer>
  <license>Apache-2.0</license>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
